# conboy

./: .cproject  .project  Makefile.am  Makefile.in  THANKS  aclocal.m4  autogen.sh  config.guess  config.h.in  config.sub  configure  configure.ac  depcomp  install-sh  ltmain.sh  missing
data/: Makefile.am  Makefile.in  conboy.conf  conboy.conf.in  conboy.desktop.in  conboy.install  conboy2.desktop  conboy2.desktop.in  conboy_applet.desktop  de.zwong.conboy.service.in  export_to_html.xsl
data/tracker/: conboy.module  default.service.add  note.metadata  tomboy-notes.module
debian/: Makefile.am  changelog  conboy-midgard.install  conboy-unstable.install  conboy.install  conboy.links  control  control.rfc822.in  control_midgard  control_with_midgard  control_without_midgard  copyright  files  launcher  modify_control.sh  postinst  postrm  rules  substvars
po/: Makefile.in  POTFILES.in  POTFILES.skip  README  ca.po  conboy.pot  cs.po  da.po  de.po  de_DE.po  en_GB.po  fi.po  fi_FI.po  fr.po  hu.po  it.po  nb.po  nl.po  pl.po  pl_PL.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  template.po  tr.po  update_template.sh
src/: .project  Makefile  Makefile.am  Makefile.in  app_data.c  app_data.h  callbacks.c  callbacks.h  conboy_applet.c  conboy_applet.h  conboy_check_button.c  conboy_check_button.h  conboy_check_mark.c  conboy_check_mark.h  conboy_config.h  conboy_http.c  conboy_http.h  conboy_module.c  conboy_module.h  conboy_note.c  conboy_note.h  conboy_note_buffer.c  conboy_note_buffer.h  conboy_note_store.c  conboy_note_store.h  conboy_note_window.c  conboy_note_window.h  conboy_oauth.c  conboy_oauth.h  conboy_plugin.c  conboy_plugin.h  conboy_plugin_info.c  conboy_plugin_info.h  conboy_plugin_manager.c  conboy_plugin_manager.h  conboy_plugin_manager_row.c  conboy_plugin_manager_row.h  conboy_plugin_store.c  conboy_plugin_store.h  conboy_storage.c  (+69 more)
src/plugins/: Makefile.am
src/plugins/storage_evernote/: Makefile  Makefile.am  Makefile.in  conboy_evernote_storage_plugin.c  conboy_evernote_storage_plugin.h  conboy_evernote_storage_plugin.lo  conboy_storage_evernote.plugin  conboy_storage_evernote.plugin.desktop.in  libstorageevernote.la
src/plugins/storage_evernote/.deps/: conboy_evernote_storage_plugin.Plo
src/plugins/storage_evernote/.libs/: libstorageevernote.la  libstorageevernote.lai
src/plugins/storage_evernote/evernote/: Errors_types.cpp  Errors_types.h  Limits_constants.cpp  Limits_constants.h  Limits_types.h  NoteStore.cpp  NoteStore.h  NoteStore_types.cpp  NoteStore_types.h  Types_types.cpp  Types_types.h  UserStore.cpp  UserStore.h  UserStore_constants.cpp  UserStore_types.cpp  UserStore_types.h
src/plugins/storage_midgard/: Makefile.am  conboy_midgard_storage_plugin.c  conboy_midgard_storage_plugin.h  conboy_storage_midgard.c  conboy_storage_midgard.h  conboy_storage_midgard.loT  conboy_storage_midgard.plugin.desktop.in  conboy_storage_midgard.plugin.in  conboy_storage_plugin_midgard.c  conboy_storage_plugin_midgard.h  org_gnome_tomboy.xml
src/plugins/storage_xml/: Makefile.am  conboy_storage_plugin_xml.c  conboy_storage_plugin_xml.h  conboy_storage_xml.c  conboy_storage_xml.h  conboy_storage_xml.plugin.desktop.in  conboy_storage_xml.plugin.in  conboy_xml_storage_plugin.c  conboy_xml_storage_plugin.h
src/tracker/: Makefile  Makefile.am  Makefile.in  libtracker-module-tomboy-notes.la  tomboy-notes.c  tomboy-notes.lo
