# This software is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation; either version 2.1 of
# the License, or (at your option) any later version.
#
# This software is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this software; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
# 02110-1301 USA
#
 
dbusdir=$(datadir)/dbus-1/services
dbus_DATA=de.zwong.conboy.service

desktopdir=$(datadir)/applications/hildon
desktop_DATA = conboy2.desktop

icon_26x26_DATA = icons/26x26/conboy.png
icon_40x40_DATA = icons/40x40/conboy.png
icon_48x48_DATA = icons/48x48/conboy.png icons/48x48/conboy-decrease_indent.png icons/48x48/conboy-hyperlink.png icons/48x48/conboy-increase_indent.png icons/48x48/conboy-text_transform.png
icon_64x64_DATA = icons/64x64/conboy.png
icon_scalable_DATA = icons/scalable/conboy.png

backupdir=/etc/osso-backup/applications
backup_DATA = conboy.conf

EXTRA_DIST = $(dbus_DATA) $(desktop_DATA) $(icon_26x26_DATA) $(icon_40x40_DATA) $(icon_48x48_DATA) $(icon_64x64_DATA) $(icon_scalable_DATA) $(backup_DATA)
