# Includes
INCLUDES = $(TRACKER_CFLAGS)

# Binary
pluginlib_LTLIBRARIES = \
    libtracker-module-tomboy-notes.la
# /Binary

# Sources
libtracker_module_tomboy_notes_la_SOURCES = \
    tomboy-notes.c
# /Sources

# XXX
#libtracker_module_tomboy_notes_la_LDFLAGS = -module -avoid-version 
# /XXX

# LDADD
libtracker_module_tomboy_notes_la_LIBADD = \
    $(TRACKER_LIBS)
#/LDADD

